--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "pg": "^8.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.4.0",
+    "react-content-loader": "^5.1.4",
     "react-datepicker": "^3.3.0",
     "react-dates": "^21.8.0",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
